fix unshifting background on mobile scroll moving gui

--- a/src/styles/_backgrounds.scss
+++ b/src/styles/_backgrounds.scss
@@ -5,8 +5,8 @@ body {
     background-image: linear-gradient(180deg, rgba(33, 16, 16, 0.62) 28%,rgba(12, 7, 5, 0.76) 100%), 
         url(../assets/images/backgrounds/contemp-comp-gtm.jpg);
     background-size: cover;
-    background-position: left bottom;
-    background-attachment: fixed;
+    background-position: unset;
+    background-attachment: unset;
 }
 
 .background-dimmer {
@@ -22,8 +22,6 @@ body {
 
     opacity: 0;
     transition: opacity .8s ease-out 1s;
-
-    &.show { opacity: 1; }
 }
 
 
